2006-01-16 P S Chakravarthi <pchakravarthi@novell.com>

	Minor Feature: Reply and Reply all for calendar items of clients
	that support such facility (personal, exchange).

	* gui/e-cal-popup.[ch] : added a definition for
	E_CAL_POPUP_SELECT_NOSAVESCHEDULES which separates out calendar items
	of clients without the static capability of saving schedules.
	* gui/itip-utils.c:
	reply_to_calendar_comp (), html_new_lines_for (): added.
	comp_to_list (): added another boolean parameter called reply_all which
	indicates if reply to everyone is wanted or not.
	added code for E_CAL_COMPONENT_METHOD_REPLY
	itip_get_comp_attendee () : added code for E_CAL_COMPONENT_METHOD_REPLY
	comp_content_type () : added code for E_CAL_COMPONENT_METHOD_REPLY
	* gui/e-calendar-view.c on_reply (), on_reply_all (): added.
	modified E_CAL_POPUP_* menu items to include Reply and Reply All


2006-01-16 P S Chakravarthi <pchakravarthi@novell.com>

	Fixes a crash in alarm-daemon on selecting "Quit" in panel options
	* gui/alarm-notify/alarm-queue.c  (remove_client_alarms):
	Removed the code loops through a list of ids generated.
	used g_hash_table_foreach instead.
	* gui/alarm-notify/alarm-queue.c (add_id_cb) : removed.
	* gui/alarm-notify/alarm-queue.c (remove_comp_by_id) : added
	* gui/alarm-notify/alarm-queue.c (alarm_queue_add_client) :
	replaced g_str_equal with g_direct_equal in g_hash_table_new
	to consider structure pointers rather than strings for keys.


2006-01-13  Johnny Jacob  <johnnyjacob@gmail.com>

	Fixes #213660
	* gui/dialogs/alarm-dialog.c (check_custom_sound):
	Save the directory path in gconf.
	(action_selection_done_cb) : Read from gconf and set
	the default path for the file entry.
	* gui/dialogs/calendar-config.ch (calendar_config_set_dir): Added.
	save the path in gconf.
	(calendar_config_get_dir_path): Added. Retrive the path from gconf.

2006-01-13  Chenthill Palanisamy  <pchenthill@novell.com>

	Fixes #320101
	* gui/e-select-names-editable.c: